src/objects/ACCL__Call_Template__c.object
<CustomObject>
    <description>Template describing basic call behaviour.</description>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Add_Job_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Job Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Auto_Status__c</fullName>
        <label>Auto Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                    <default>true</default>
                    <label>Plan</label>
                </value>
                <value>
                    <fullName>Unscheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Cancel_Reason_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cancel Reason Required</description> 
        <label>Cancel Reason Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Capture_Proceeding_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Capture Proceeding Time</description>
        <label>Capture Proceeding Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Check_Overlap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Overlap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Company_Required__c</fullName>
        <description>Company Required</description>
        <label>Company Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not required</fullName>
                    <default>true</default>
                    <label>Not required</label>
                </value>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Consider_POS_Check__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If it is True, then Call will consider POS in it&apos;s questions.</description>
        <label>Consider POS Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Creation_Platform__c</fullName>
        <description>Creation Platform</description>
        <label>Creation Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                    <default>true</default>
                    <label>Both</label>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Default_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Default Duration</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Delete_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DeleteAllowed</description>
        <label>Delete Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Derivation_Threshold__c</fullName>
        <description>Derivation Threshold</description>
        <label>Derivation Threshold</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c,
      &quot;Language1&quot;, ACCL__Description_Language_1__c,
      &quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
      &quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
      &quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
      ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Display_Promotions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Promotions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Historical_Products__c</fullName>
        <description>Historical Products</description>
        <label>Historical Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>SameMeta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__KPI_Relevant__c</fullName>
        <description>Defines if a call is relevant for KPI calculation for the selected KPIs.</description>
        <inlineHelpText>Defines if a call is relevant for KPI calculation for the selected KPIs.</inlineHelpText>
        <label>KPI Relevant</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <label>All KPIs</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Loc_Capture_During_Cancel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Location Capture at Cancel</description>
        <label>Location Capture at Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Loc_Capture_During_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Location Capture at Complete</description>
        <label>Location Capture at Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Max_Pictures__c</fullName>
        <description>Max. Number of Pictures</description>
        <label>Max. Number of Pictures</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Meta_Type__c</fullName>
        <label>Meta Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                    <default>true</default>
                    <label>Call</label>
                </value>
                <value>
                    <fullName>DeliveryVisit</fullName>
                    <label>Delivery Visit</label>
                </value>
                <value>
                    <fullName>VanSales</fullName>
                    <label>Van Sales</label>
                </value>
                <value>
                    <fullName>Merchandising</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Mobility_Color__c</fullName>
        <description>Field to define the color of call on Mobility device</description>
        <inlineHelpText>Please choose the color for the call to display in the call calendar</inlineHelpText>
        <label>Mobility Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EED2E0</fullName>
                </value>
                <value>
                    <fullName>F7EBD9</fullName>
                </value>
                <value>
                    <fullName>DDECD1</fullName>
                </value>
                <value>
                    <fullName>D1DDEC</fullName>
                </value>
                <value>
                    <fullName>6688BB</fullName>
                </value>
                <value>
                    <fullName>EE9B38</fullName>
                </value>
                <value>
                    <fullName>77AA99</fullName>
                </value>
                <value>
                    <fullName>467596</fullName>
                </value>
                <value>
                    <fullName>008899</fullName>
                </value>
                <value>
                    <fullName>DD4411</fullName>
                </value>
                <value>
                    <fullName>AA1133</fullName>
                </value>
                <value>
                    <fullName>003344</fullName>
                </value>
                <value>
                    <fullName>BBBB00</fullName>
                </value>
                <value>
                    <fullName>551155</fullName>
                </value>
                <value>
                    <fullName>FF7F50</fullName>
                </value>
                <value>
                    <fullName>6495ED</fullName>
                </value>
                <value>
                    <fullName>E9967A</fullName>
                </value>
                <value>
                    <fullName>8FBC8F</fullName>
                </value>
                <value>
                    <fullName>FFD700</fullName>
                </value>
                <value>
                    <fullName>DAA520</fullName>
                </value>
                <value>
                    <fullName>ADD8E6</fullName>
                </value>
                <value>
                    <fullName>F08080</fullName>
                </value>
                <value>
                    <fullName>FFA07A</fullName>
                </value>
                <value>
                    <fullName>20B2AA</fullName>
                </value>
                <value>
                    <fullName>87CEFA</fullName>
                </value>
                <value>
                    <fullName>B0C4DE</fullName>
                </value>
                <value>
                    <fullName>BC8F8F</fullName>
                </value>
                <value>
                    <fullName>FA8072</fullName>
                </value>
                <value>
                    <fullName>F4A460</fullName>
                </value>
                <value>
                    <fullName>87CEEB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Mobility_Relevant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mobility Relevant</description>
        <label>Mobility Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Mobility_User_Guidance__c</fullName>
        <description>Mobility User Guidance</description>
        <label>Mobility User Guidance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <default>true</default>
                    <label>Sales</label>
                </value>
                <value>
                    <fullName>Merchandizing</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>NonCustomer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Finding_Lead_Time__c</fullName>
        <label>Promotion Finding Lead Time</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Sort__c</fullName>
        <description>Sort</description>
        <label>Sort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Sync_Options__c</fullName>
        <description>Sync Options</description>
        <label>Sync Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>CompleteCall</fullName>
                </value>
                <value>
                    <fullName>CancelCall</fullName>
                </value>
                <value>
                    <fullName>CompleteCancelCall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Tag_Media_Date_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tag Media Date and Time</description>
        <label>Tag Media Date and Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Tag_Media_Geo_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tag Media Geo Location</description>
        <label>Tag Media Geo Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Update_Planned_Times__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Update Planned Times</description>
        <label>Update Planned Times</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__User_Roles__c</fullName>
        <description>User roles assigned to the Order Template.
      NOTE: Please ensure the master picklist values exactly match Technical Name of the permission sets. Set the user value in Translation. (e.g. ACSF_Master_Data_Admin is the master picklist value, Master Data Admin is translated value).</description>
        <label>User Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACSF_KAM</fullName>
                </value>
                <value>
                    <fullName>ACSF_Master_Data_Admin</fullName>
                </value>
                <value>
                    <fullName>ACSF_Retail_Admin</fullName>
                </value>
                <value>
                    <fullName>ACSF_Sales_User</fullName>
                </value>
                <value>
                    <fullName>ACSF_Security_Admin</fullName>
                </value>
                <value>
                    <fullName>ACSF_Supervisor</fullName>
                </value>
                <value>
                    <fullName>ACSF_Tour_User</fullName>
                </value>
                <value>
                    <fullName>REX_Sales_Rep</fullName>
                </value>
				<value>
                    <fullName>MDLZ_Visits</fullName>
                </value>
                <value>
                    <fullName>MDLZ_Coaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>MDLZ_Visit_Category__c</fullName>
        <label>Visit Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MLZ_AllowRescheduleToPastDay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to reschedule calls to Past day</description>
        <label>Allow Reschedule to Past Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MLZ_AllowReschedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow users to reschedule calls</description>
        <label>Allow Reschedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REX_Call_UI_Settings__c</fullName>
        <description>The values of this picklist should always be a concatenation of &quot;REX_&quot; and the token value used in Accenture Cloud Mobility UI Contract for that card/menu item. F.e. REX_CardActivities, REX_StoreCheckMenuItem.</description>
        <inlineHelpText>Can be used to restrict which Store Cards or Navigation Items should be shown. Only the ones that are chosen are visible then. No cards chosen --&gt; all cards visible. No menu items chosen --&gt; all menu items visible. Nothing chosen --&gt; everything visible.</inlineHelpText>
        <label>Call UI Settings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REX_CardActivities</fullName>
                </value>
                <value>
                    <fullName>REX_CardHeader</fullName>
                </value>
                <value>
                    <fullName>REX_CardSellIns</fullName>
                </value>
                <value>
                    <fullName>REX_CardReportingSurveyExceptions</fullName>
                </value>
                <value>
                    <fullName>REX_CardPicture</fullName>
                </value>
                <value>
                    <fullName>REX_CardMobileLinks</fullName>
                </value>
                <value>
                    <fullName>REX_CardCallNotes</fullName>
                </value>
                <value>
                    <fullName>REX_CardOrderHistory</fullName>
                </value>
                <value>
                    <fullName>REX_CardCustomerTasks</fullName>
                </value>
                <value>
                    <fullName>REX_StoreCheckMenuItem</fullName>
                </value>
                <value>
                    <fullName>REX_SurveyMenuItem</fullName>
                </value>
                <value>
                    <fullName>REX_PromotionCalendarMenuItem</fullName>
                </value>
                <value>
                    <fullName>REX_PromotionsMenuItem</fullName>
                </value>
                <value>
                    <fullName>REX_SalesFolderMenuItem</fullName>
                </value>
                <value>
                    <fullName>REX_AttachmentMenuItem</fullName>
                </value>
                <value>
                    <fullName>REX_NotesMenuItem</fullName>
                </value>
                <value>
                    <fullName>REX_CustomerMenuItem</fullName>
                </value>
                <value>
                    <fullName>REX_OrdersMenuItem</fullName>
                </value>
                <value>
                    <fullName>REX_AssetsMenuItem</fullName>
                </value>
                <value>
                    <fullName>REX_CustomerTasksMenuItem</fullName>
                </value>
                <value>
                    <fullName>REX_CompleteMenuItem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RE_CallTemplate_ExternalID__c</fullName>
        <description>It maintain Unique value for external ID</description>
        <externalId>true</externalId>
        <label>RE_Call Template_ExternalID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Call Template</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Meta_Type__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_active_Org_0001</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Meta_Type__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCL__Sales_Org__c</field>
            <operation>equals</operation>
            <value>0001</value>
        </filters>
        <label>All active - Org 0001</label>
    </listViews>
    <nameField>
        <label>Call Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Check_If_Sales_Org_Is_Changed</fullName>
        <active>true</active>
        <description>The Sales Org can&apos;t be edited after Call Template creation.</description>
        <errorConditionFormula>ISCHANGED(ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Sales Org can&apos;t be edited after Call Template creation.</errorMessage>
    </validationRules>
</CustomObject>